# finai-agent

./: .gitignore  README.md  app.py  cdk.context.json  pyproject.toml
artifacts/scratch/: langfuse_diagnostic.py  test_runner.py  update_ipynb.py  update_ipynb_2.py
backend/: Dockerfile.lambda
backend/api/: lambda_handler.py  main.py  pyproject.toml
backend/charter/: agent.py  lambda_handler.py  pyproject.toml  templates.py
backend/database/: pyproject.toml  run_migrations.py  seed_data.py
backend/database/migrations/: 001_schema.sql
backend/database/src/: __init__.py  client.py  models.py  schemas.py
backend/ingest/: ingest_s3vectors.py
backend/planner/: agent.py  aurora_config.json  lambda_handler.py  market.py  observability.py  prices.py  pyproject.toml  templates.py
backend/reporter/: agent.py  judge.py  lambda_handler.py  pyproject.toml  templates.py
backend/researcher/: .dockerignore  Dockerfile  context.py  mcp_servers.py  pyproject.toml  server.py  tools.py
backend/retirement/: agent.py  lambda_handler.py  pyproject.toml  templates.py
backend/tagger/: agent.py  lambda_handler.py  pyproject.toml  templates.py
frontend/: Dockerfile  app.py
frontend/.streamlit/: config.toml
scripts/: build_api_zip.py
stacks/: database_agents_stack.py  frontend_stack.py  researcher_stack.py
test/: langfuse-basic.ipynb  test_researcher.ipynb  test_researcher.py
