[project]
name = "planner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "finai-database",
    "boto3>=1.40.8",
    "langfuse>=2.0.0,<3.0.0",
    "litellm>=1.60.0",
    "pydantic>=2.11.7",
    "pydantic-ai>=1.0.6",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
finai-database = { workspace = true }
